# ionos-ddns

./: Cargo.toml
.github/workflows/: build_docker_image.yml
docker/: build.dockerfile
src/: api.rs  config.rs  ip_getter.rs  main.rs
